more refactorings suggested by sonar